--- a/.github/workflows/build-and-publish-draft.yaml
+++ b/.github/workflows/build-and-publish-draft.yaml
@@ -73,10 +73,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Find map files
+        id: set-matrix
         run: |
           IMAGES=$(find draft-scenarios -name "*tex" -exec grep -Po "maps[^}]*\.png" '{}' \; | sort | uniq | sed 's|maps/||')
           echo $IMAGES
           echo "matrix=$(echo "$IMAGES" | jq -R -s -c 'split("\n") | map(select(length > 0)) | {map: .}')" >> $GITHUB_OUTPUT
+
 
   make_draft_maps_monochrome:
     needs: [find_draft_map_files]
@@ -108,7 +110,7 @@ jobs:
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
   build_draft_monochrome:
-    needs: [build, make_draft_maps_monochrome]
+    needs: [make_draft_maps_monochrome]
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -153,16 +155,26 @@ jobs:
           du -sh drafts.pdf
 
       - name: Move file
-        run: |
-          mkdir -p drafts
-          mv drafts.pdf drafts/drafts-mono.pdf
+        run:  mv drafts.pdf drafts-mono.pdf
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: drafts-mono
+          path: draft-scenarios/drafts-mono.pdf
+          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: [build, build_draft_monochrome]
+    steps:
+      - name: Create dir
+        run: mkdir drafts
 
       - name: Download regular draft PDF
         uses: actions/download-artifact@v4
         with:
-          name: drafts
+          name: drafts*
           path: drafts
-        continue-on-error: true
 
       - name: Check
         run: ls -l drafts
@@ -175,3 +187,7 @@ jobs:
       #     publish_branch: drafts
       #     publish_dir: ./draft-scenarios/drafts
       #     force_orphan: true
+
+      - uses: geekyeggo/delete-artifact@v5
+        with:
+          name: monochrome-map-*
