--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-  # pull_request:
-  #   branches: [main]
+  pull_request:
+    branches: [main]
 
 env:
   ARTIFACT_RETENTION_DAYS: 1
@@ -188,15 +188,13 @@ jobs:
           du -sh main_${{ matrix.language }}.pdf
 
       - name: Move file
-        run: |
-          mkdir ${{ matrix.language }}
-          mv main_${{ matrix.language }}.pdf ${{ matrix.language }}/main_${{ matrix.language }}-mono.pdf
+        run: mv main_${{ matrix.language }}.pdf main_${{ matrix.language }}-mono.pdf
 
-      - name: Download compiled book
-        uses: actions/download-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
-          name: main_${{ matrix.language }}
-          path: ${{ matrix.language }}
+          name: main_${{ matrix.language }}-mono
+          path: main_${{ matrix.language }}-mono.pdf
+          retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
       - name: Check
         run: ls -l ${{ matrix.language }}
@@ -241,10 +239,36 @@ jobs:
             exit 1
           fi
 
-  delete_artifacts:
+  publish:
     runs-on: ubuntu-latest
-    needs: [build_monochrome]
+    needs: [build, build_monochrome]
+    strategy:
+      fail-fast: false
+      matrix:
+        language: ["pl", "cs", "fr", "de"]
     steps:
+      - name: Create dir
+        run: mkdir ${{ matrix.language }}
+
+      - name: Download compiled books
+        uses: actions/download-artifact@v4
+        with:
+          pattern: main_${{ matrix.language }}*
+          path: ${{ matrix.language }}
+          merge-multiple: true
+
+      - name: Check
+        run: ls -l ${{ matrix.language }}
+
+      # - name: Publish drafts in artifacts repository
+      #   uses: peaceiris/actions-gh-pages@v4
+      #   with:
+      #     deploy_key: ${{ secrets.SSH_DEPLOY_KEY_BUILD_ARTIFACTS }}
+      #     external_repository: qwrtln/Homm3BG-mission-book-build-artifacts
+      #     publish_branch: drafts
+      #     publish_dir: ./draft-scenarios/drafts
+      #     force_orphan: true
+
       - uses: geekyeggo/delete-artifact@v5
         with:
           name: monochrome-map-*
