--- a/.github/workflows/build-and-publish-draft.yaml
+++ b/.github/workflows/build-and-publish-draft.yaml
@@ -6,8 +6,8 @@ on:
       - main
     # paths:
     #   - 'draft-scenarios/**'
-  pull_request:
-    branches: [main]
+  # pull_request:
+  #   branches: [main]
     # paths:
     #   - 'draft-scenarios/**'
 
