--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -234,7 +234,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: ["pl", "cs", "fr", "de"]
+        language: ["en", "pl", "cs", "fr", "de"]
     steps:
       - name: Create dir
         run: mkdir ${{ matrix.language }}
