--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -38,6 +38,21 @@ jobs:
           export PERL5LIB="${PO4A_DIR}/lib:${PERL5LIB}"
           ./${PO4A_DIR}/po4a --no-update po4a.cfg
 
+      - name: Cache LaTeX packages and build
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.texlive
+            ~/.texmf-var
+            ./**/*.aux
+            ./**/*.log
+            ./**/*.toc
+            ./**/*.out
+          key: texlive-${{ matrix.language }}-${{ hashFiles('**/*.tex') }}-${{ github.run_id }}
+          restore-keys: |
+            texlive-${{ matrix.language }}-${{ hashFiles('**/*.tex') }}-
+            texlive-${{ matrix.language }}-
+
       - name: Compile mission book
         uses: xu-cheng/latex-action@v3
         with:
@@ -93,7 +108,7 @@ jobs:
 
   find_map_files:
     runs-on: ubuntu-latest
-    if: github.event_name != 'pull_request'
+    # if: github.event_name != 'pull_request'
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
@@ -117,13 +132,23 @@ jobs:
       - name: Set up repository
         uses: actions/checkout@v4
 
+      - name: Cache ImageMagick AppImage
+        uses: actions/cache@v3
+        with:
+          path: imagemagick-appimage
+          key: imagemagick-${{ env.IMAGEMAGICK_URL }}
+
       - name: Install magick
         run: |
           sudo add-apt-repository universe
           sudo apt-get install -qq -y --no-install-recommends libfuse2t64  # FUSE is required for GH runners to run AppImages
-          # apt has v6, while v7 is required, hence downloading AppImage
-          wget --quiet ${{ env.IMAGEMAGICK_URL }}
-          find . -name "ImageMagick*" -exec chmod +x '{}' \; -exec mv '{}' /usr/local/bin/magick \;
+
+          mkdir -p imagemagick-appimage
+          if [[ ! -f imagemagick-appimage/magick ]]; then
+            wget --quiet ${{ env.IMAGEMAGICK_URL }} -O imagemagick-appimage/magick
+            chmod +x imagemagick-appimage/magick
+          fi
+          mv imagemagick-appimage/magick /usr/local/bin/magick
 
       - name: Process map file
         run: tools/to_monochrome.sh "assets/maps/${{ matrix.map }}"
@@ -247,6 +272,7 @@ jobs:
           merge-multiple: true
 
       - name: Publish ${{ matrix.language }} in artifacts repository
+        if:  github.event_name != 'pull_request'
         uses: peaceiris/actions-gh-pages@v4
         with:
           deploy_key: ${{ secrets.SSH_DEPLOY_KEY_BUILD_ARTIFACTS }}
