--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -28,15 +28,26 @@ jobs:
       - name: Set up repository
         uses: actions/checkout@v4
 
+      - name: Cache po4a
+        if: ${{ matrix.language != 'en' }}
+        uses: actions/cache@v3
+        id: cache-po4a
+        with:
+          path: po4a-${{ env.PO4A_VERSION }}
+          key: po4a-${{ env.PO4A_VERSION }}
+
+      - name: Download po4a if not cached
+        if: steps.cache-po4a.outputs.cache-hit != 'true' && ${{ matrix.language != 'en' }}
+        run: |
+          wget --quiet ${{ env.PO4A_GH_URL }}/v${{ env.PO4A_VERSION }}/po4a-${{ env.PO4A_VERSION}}.tar.gz
+          tar -xf po4a-${{ env.PO4A_VERSION}}.tar.gz
+
       - name: Generate translations for ${{ matrix.language }}
         if: ${{ matrix.language != 'en' }}
         run: |
-          sudo apt-get install -y po4a  # required as standalone po4a is missing some deps
-          wget --quiet ${{ env.PO4A_GH_URL }}/v${{ env.PO4A_VERSION }}/po4a-${{ env.PO4A_VERSION}}.tar.gz  # sadly the version from apt isn't working
-          export PO4A_DIR="po4a-${{ env.PO4A_VERSION }}"
-          tar -xf ${PO4A_DIR}.tar.gz
-          export PERL5LIB="${PO4A_DIR}/lib:${PERL5LIB}"
-          ./${PO4A_DIR}/po4a --no-update po4a.cfg
+          sudo apt-get install -y po4a
+          export PERL5LIB="po4a-${{ env.PO4A_VERSION }}/lib:${PERL5LIB}"
+          ./po4a-${{ env.PO4A_VERSION }}/po4a --no-update po4a.cfg
 
       - name: Cache LaTeX packages and build
         uses: actions/cache@v3
@@ -145,6 +156,7 @@ jobs:
 
           mkdir -p imagemagick-appimage
           if [[ ! -f imagemagick-appimage/magick ]]; then
+            echo "No cache found, downloading ImageMagick AppImage."
             wget --quiet ${{ env.IMAGEMAGICK_URL }} -O imagemagick-appimage/magick
             chmod +x imagemagick-appimage/magick
           fi
@@ -172,15 +184,41 @@ jobs:
       - name: Set up repository
         uses: actions/checkout@v4
 
+      - name: Cache po4a
+        if: ${{ matrix.language != 'en' }}
+        uses: actions/cache@v3
+        id: cache-po4a
+        with:
+          path: po4a-${{ env.PO4A_VERSION }}
+          key: po4a-${{ env.PO4A_VERSION }}
+
+      - name: Download po4a if not cached
+        if: steps.cache-po4a.outputs.cache-hit != 'true' && ${{ matrix.language != 'en' }}
+        run: |
+          wget --quiet ${{ env.PO4A_GH_URL }}/v${{ env.PO4A_VERSION }}/po4a-${{ env.PO4A_VERSION}}.tar.gz
+          tar -xf po4a-${{ env.PO4A_VERSION}}.tar.gz
+
       - name: Generate translations for ${{ matrix.language }}
         if: ${{ matrix.language != 'en' }}
         run: |
-          sudo apt-get install -y po4a  # required as standalone po4a is missing some deps
-          wget --quiet ${{ env.PO4A_GH_URL }}/v${{ env.PO4A_VERSION }}/po4a-${{ env.PO4A_VERSION}}.tar.gz  # sadly the version from apt isn't working
-          export PO4A_DIR="po4a-${{ env.PO4A_VERSION }}"
-          tar -xf ${PO4A_DIR}.tar.gz
-          export PERL5LIB="${PO4A_DIR}/lib:${PERL5LIB}"
-          ./${PO4A_DIR}/po4a --no-update po4a.cfg
+          sudo apt-get install -y po4a
+          export PERL5LIB="po4a-${{ env.PO4A_VERSION }}/lib:${PERL5LIB}"
+          ./po4a-${{ env.PO4A_VERSION }}/po4a --no-update po4a.cfg
+
+      - name: Cache LaTeX packages and build
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.texlive
+            ~/.texmf-var
+            ./**/*.aux
+            ./**/*.log
+            ./**/*.toc
+            ./**/*.out
+          key: texlive-${{ matrix.language }}-${{ hashFiles('**/*.tex') }}-${{ github.run_id }}
+          restore-keys: |
+            texlive-${{ matrix.language }}-${{ hashFiles('**/*.tex') }}-
+            texlive-${{ matrix.language }}-
 
       - name: Download monochrome maps
         uses: actions/download-artifact@v4
@@ -281,11 +319,7 @@ jobs:
           publish_dir: ./${{ matrix.language }}
           force_orphan: true
 
-
-  delete_artifacts:
-    runs-on: ubuntu-latest
-    needs: [publish]
-    steps:
       - uses: geekyeggo/delete-artifact@v5
+        if: ${{ matrix.language == 'en' }}
         with:
           name: monochrome-map-*
