Cache monochrome maps

--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -132,6 +132,16 @@ jobs:
           IMAGES=$(find . -type f -name "*tex" -not -regex ".*/\(draft-scenarios\|translated\|svg-inkscape\|templates\)/.*" -exec grep -Po "maps[^}]*\.png" '{}' \; | sort | uniq | sed 's|maps/||')
           echo "matrix=$(echo "$IMAGES" | jq -R -s -c 'split("\n") | map(select(length > 0)) | {map: .}')" >> $GITHUB_OUTPUT
 
+      - name: Calculate file hashes
+        id: set-hashes
+        run: |
+          HASH_MAP="{}"
+          for MAP in $(echo "${{ steps.set-matrix.outputs.matrix }}" | jq -r '.map[]'); do
+            HASH=$(sha256sum "assets/maps/$MAP" | cut -d' ' -f1)
+            HASH_MAP=$(echo "$HASH_MAP" | jq --arg map "$MAP" --arg hash "$HASH" '. + {($map): $hash}')
+          done
+          echo "hashes=$HASH_MAP" >> $GITHUB_OUTPUT
+
   make_maps_monochrome:
     needs: find_map_files
     runs-on: ubuntu-latest
@@ -142,6 +152,21 @@ jobs:
     steps:
       - name: Set up repository
         uses: actions/checkout@v4
+
+      - name: Get map hash
+        id: get-hash
+        run: |
+          HASHES='${{ needs.find_map_files.outputs.hashes }}'
+          MAP_HASH=$(echo "$HASHES" | jq -r '."${{ matrix.map }}"')
+          echo "map_hash=$MAP_HASH" >> $GITHUB_OUTPUT
+
+      - name: Cache monochrome map
+        id: cache-map
+        uses: actions/cache@v3
+        with:
+          path: assets/maps/${{ matrix.map }}
+          key: monochrome-map-${{ matrix.map }}-${{ steps.get-hash.outputs.map_hash }}
+
 
       - name: Cache ImageMagick AppImage
         uses: actions/cache@v3
@@ -163,6 +188,7 @@ jobs:
           mv imagemagick-appimage/magick /usr/local/bin/magick
 
       - name: Process map file
+        if: steps.cache-map.outputs.cache-hit != 'true'
         run: tools/to_monochrome.sh "assets/maps/${{ matrix.map }}"
 
       - name: Upload processed file
