--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -158,7 +158,7 @@ jobs:
           key: monochrome-map-${{ steps.hash.outputs.file_hash }}
 
       - name: Cache ImageMagick AppImage
-        # if: steps.cache-map.outputs.cache-hit != 'true'
+        if: steps.cache-map.outputs.cache-hit != 'true'
         id: cache-magick
         uses: actions/cache@v3
         with:
