--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -28,24 +28,12 @@ jobs:
       - name: Set up repository
         uses: actions/checkout@v4
 
-      - name: Cache po4a
-        if: ${{ matrix.language != 'en' }}
-        uses: actions/cache@v3
-        id: cache-po4a
-        with:
-          path: po4a-${{ env.PO4A_VERSION }}
-          key: po4a-${{ env.PO4A_VERSION }}
-
-      - name: Download po4a if not cached
-        if: steps.cache-po4a.outputs.cache-hit != 'true' && ${{ matrix.language != 'en' }}
-        run: |
-          wget --quiet ${{ env.PO4A_GH_URL }}/v${{ env.PO4A_VERSION }}/po4a-${{ env.PO4A_VERSION}}.tar.gz
-          tar -xf po4a-${{ env.PO4A_VERSION}}.tar.gz
-
       - name: Generate translations for ${{ matrix.language }}
         if: ${{ matrix.language != 'en' }}
         run: |
           sudo apt-get install -y po4a
+          wget --quiet ${{ env.PO4A_GH_URL }}/v${{ env.PO4A_VERSION }}/po4a-${{ env.PO4A_VERSION}}.tar.gz
+          tar -xf po4a-${{ env.PO4A_VERSION}}.tar.gz
           export PERL5LIB="po4a-${{ env.PO4A_VERSION }}/lib:${PERL5LIB}"
           ./po4a-${{ env.PO4A_VERSION }}/po4a --no-update po4a.cfg
 
@@ -166,7 +154,7 @@ jobs:
           key: imagemagick-${{ env.IMAGEMAGICK_URL }}
 
       - name: Install magick
-        if: steps.cache-magick.outputs.cache-hit != 'true'
+        if: steps.cache-map.outputs.cache-hit != 'true'
         run: |
           sudo add-apt-repository universe
           sudo apt-get install -qq -y --no-install-recommends libfuse2t64  # FUSE is required for GH runners to run AppImages
@@ -201,24 +189,12 @@ jobs:
       - name: Set up repository
         uses: actions/checkout@v4
 
-      - name: Cache po4a
-        if: ${{ matrix.language != 'en' }}
-        uses: actions/cache@v3
-        id: cache-po4a
-        with:
-          path: po4a-${{ env.PO4A_VERSION }}
-          key: po4a-${{ env.PO4A_VERSION }}
-
-      - name: Download po4a if not cached
-        if: steps.cache-po4a.outputs.cache-hit != 'true' && ${{ matrix.language != 'en' }}
-        run: |
-          wget --quiet ${{ env.PO4A_GH_URL }}/v${{ env.PO4A_VERSION }}/po4a-${{ env.PO4A_VERSION}}.tar.gz
-          tar -xf po4a-${{ env.PO4A_VERSION}}.tar.gz
-
       - name: Generate translations for ${{ matrix.language }}
         if: ${{ matrix.language != 'en' }}
         run: |
           sudo apt-get install -y po4a
+          wget --quiet ${{ env.PO4A_GH_URL }}/v${{ env.PO4A_VERSION }}/po4a-${{ env.PO4A_VERSION}}.tar.gz
+          tar -xf po4a-${{ env.PO4A_VERSION}}.tar.gz
           export PERL5LIB="po4a-${{ env.PO4A_VERSION }}/lib:${PERL5LIB}"
           ./po4a-${{ env.PO4A_VERSION }}/po4a --no-update po4a.cfg
 
