--- a/.github/workflows/po4a-check.yaml
+++ b/.github/workflows/po4a-check.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run po4a
-        uses: qwrtln/po4a-action@main
+        uses: qwrtln/po4a-action@v1
         with:
           version: "0.73"
           config: "po4a.cfg"
