--- a/.github/workflows/po4a-comment-commit.yaml
+++ b/.github/workflows/po4a-comment-commit.yaml
@@ -33,7 +33,7 @@ jobs:
           permission: write
 
       - name: Run po4a
-        uses: qwrtln/po4a-action@main
+        uses: qwrtln/po4a-action@v1
         with:
           version: "0.73"
           config: "po4a.cfg"
